--- a/Marmalade/src/main/resources/i18n/lang.properties
+++ b/Marmalade/src/main/resources/i18n/lang.properties
@@ -24,3 +24,10 @@ menu.exit=Close
 menu.about=About
 menu.file=File
 menu.help=Help
+label.name=Name
+label.description=Description
+label.exec.file=Executable File
+label.image.uri=Image File
+menu.new=New
+button.save=Save
+button.cancel=Cancel
