--- a/Marmalade/src/main/resources/i18n/lang_de_DE.properties
+++ b/Marmalade/src/main/resources/i18n/lang_de_DE.properties
@@ -24,3 +24,10 @@ menu.exit=Beenden
 menu.about=\u00dcber
 menu.file=Datei
 menu.help=Hilfe
+label.name=Name
+label.description=Beschreibung
+label.exec.file=Startdatei
+label.image.uri=Bilddatei
+menu.new=Neu
+button.save=Speichern
+button.cancel=Abbrechen
